--- a/src/main/webapp/resources/css/styleLogin.css
+++ b/src/main/webapp/resources/css/styleLogin.css
@@ -15,7 +15,7 @@ input{
   font-family:'Ubuntu';
   font-weight:300;
   border:0;
-  border-bottom:1px solid #ff5407;
+  border-bottom:1px solid #A30000;
   width:100%;
   height:36px;
   font-size:26px;
