--- a/src/main/webapp/resources/css/styleLogin.css
+++ b/src/main/webapp/resources/css/styleLogin.css
@@ -1,70 +1,109 @@
 @import url(https://fonts.googleapis.com/css?family=Karla);
+
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300);
 
-.wrap{
-  padding:120px 0;
-  font-size:62px;
-  color:#888;
-  width:400px;
-  font-family:'Karla';
-  margin:0 auto;
-  text-align:center;
+.wrap {
+	padding: 120px 0;
+	font-size: 62px;
+	color: #888;
+	width: 400px;
+	font-family: 'Karla';
+	margin: 0 auto;
+	text-align: center;
 }
 
-input{
-  font-family:'Ubuntu';
-  font-weight:300;
-  border:0;
-  border-bottom:1px solid #A30000;
-  width:100%;
-  height:36px;
-  font-size:26px;
-}
-.log{
-  font-family:'Ubuntu';
-  font-weight:300;
-  border:0;
-  width:100%;
-  height:36px;
-  font-size:26px;
-}
-input:focus{
-  outline:none;
-  box-shadow:none;
-  background:#ffeae2;
+.failLogin {
+	padding: 120px 0;
+	font-size: 20px;
+	color: #888;
+	width: 400px;
+	font-family: 'Karla';
+	margin: 0 auto;
+	text-align: center;
 }
 
-button{
-  border:0;
-  background:transparent;
-  padding:5px;
-  margin-top:50px;
-  position:relative;
-  outline:0;
-}
-.buttonafter:after{
-content:'';
-display:block;
-position:absolute;
-top:8px;
-left:100%; /*should be set to 100% */
-width:0;
-height:0;
-border-color: transparent transparent transparent #14a03d; /*border color should be same as div div background color*/
-border-style: solid;
-border-width: 5px;
-
+input {
+	font-family: 'Ubuntu';
+	font-weight: 300;
+	border: 0;
+	border-bottom: 1px solid #A30000;
+	width: 100%;
+	height: 36px;
+	font-size: 26px;
 }
 
-.forgot{
-  background:#a0a0a0;
-  color:#fff;
-  float:left;
+.log {
+	font-family: 'Ubuntu';
+	font-weight: 300;
+	border: 0;
+	width: 100%;
+	height: 36px;
+	font-size: 26px;
 }
 
-.login{
-  position: sticky;
-  background:#a0a0a0;
-  color:#fff;
-  float:right;
+input:focus {
+	outline: none;
+	box-shadow: none;
+	background: #ffeae2;
+}
+
+button {
+	border: 0;
+	background: transparent;
+	padding: 5px;
+	margin-top: 50px;
+	position: relative;
+	outline: 0;
+}
+
+.buttonafter:after {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 8px;
+	left: 100%; /*should be set to 100% */
+	width: 0;
+	height: 0;
+	border-color: transparent transparent transparent #14a03d;
+	/*border color should be same as div div background color*/
+	border-style: solid;
+	border-width: 5px;
+}
+
+.forgot {
+	background: #a0a0a0;
+	color: #fff;
+	float: left;
+}
+
+.login {
+	position: sticky;
+	background: #a0a0a0;
+	color: #fff;
+	float: right;
+}
+
+#imaLogin {
+	width: 70%;
+	height: 70%;
+}
+
+.button {
+	background-color: #A30000; /* Red */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+	-webkit-transition-duration: 0.4s; /* Safari */
+	transition-duration: 0.4s;
+}
+
+.button2:hover {
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0
+		rgba(0, 0, 0, 0.19);
 }
