--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -1,3 +1,9 @@
 .ui-widget {
 	font-size: 0.95em;
 }
+
+input[type="text"]:focus, input[type = "password"]:focus {
+	outline: none;
+	border-color: #A30000;
+	box-shadow: 0 0 10px #A30000;
+}
