--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -11,3 +11,16 @@ input[type="text"]:focus, input[type="password"]:focus {
 	border-color: #A30000;
 	box-shadow: 0 0 10px #A30000;
 }
+
+h2 {
+	color: #A30000;
+	font-family: sans-serif;
+}
+
+#user {
+	font-family: sans-serif;
+	font-size: 18px;
+	font-weight: 400;
+	color: #ffffff;
+	background: #ee0467
+}
